--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.4",
-    "gsap": "^3.13.0",
+    "@tailwindcss/vite": "^4.1.8",
+    "daisyui": "^5.0.42",
+    "framer-motion": "^12.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
